# flowistry-cli

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  driver.rs  input.rs  lib.rs  output.rs
src/analysis/: focus.rs  mod.rs  slice.rs  spans.rs
