[package]
name = "flowistry-cli"
version = "0.1.0"
edition = "2024"
description = "Clean CLI for Flowistry information-flow analysis"

[package.metadata.rust-analyzer]
rustc_private = true

[lib]
name = "flowistry_cli"
path = "src/lib.rs"

[[bin]]
name = "cargo-flowistry"
path = "src/bin/cargo-flowistry.rs"

[[bin]]
name = "flowistry-driver"
path = "src/bin/flowistry-driver.rs"

[dependencies]
flowistry = "=0.5.44"
rustc_plugin = "=0.14.2-nightly-2025-08-20"
rustc_utils = { version = "=0.14.2-nightly-2025-08-20", features = ["indexical", "serde"] }
anyhow = "1"
clap = { version = "4", default-features = false, features = ["std", "derive", "help", "usage"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = { version = "0.9", default-features = false }
log = "0.4"
